--- a/index.html
+++ b/index.html
@@ -8,63 +8,59 @@
 
         <link rel="stylesheet" href="css/style.css">
 
-        <title>10_js_12_game</title>
-
-
+        <title>Game "catch a smile"</title>
 </head>
 
-
 <header>
-        <div id="wapka" class="wapka">
-     Catch me if you can!
+        <div id="button_header" class="button_header">
+                Catch me if you can!!!
         </div>
 </header>
 
-
 <body>
-        <div id="ekran" class="ekran ">
+        <div id="screen" class="screen ">
 
                 <img class="smileAnimation" id="smile" src="img/smile.png" onmouseover="mouselog(event)">
 
-               
 
-        <div class="panel ">
+                <div class="panel ">
 
-                <div  class="miniBlock">
-                        score
-                        <p id="scoreN"> </p>
+                        <div class="miniBlock">
+                                score
+                                <p id="scoreN"> </p>
+                        </div>
+
+                        <div class="miniBlock">
+                                points to Next Level
+                                <p id="pnl"> </p>
+                        </div>
+
+                        <div class="miniBlock">
+                                level
+                                <p id="levelN"> </p>
+                        </div>
+
+                        <div class="miniBlock">
+                                miss clicks
+                                <p id="missN"> </p>
+                        </div>
+
+
+                        <div class="miniBlock">
+                                timer
+                                <p id="timer"> </p>
+                        </div>
+
+                        <div class="miniBlock">
+                                hight scores
+                                <p> Yair : 770</p>
+
+                        </div>
+
                 </div>
-
-                <div class="miniBlock">
-                        points to Next Level
-                          <p id="pnl"> </p>
-                </div>
-
-                <div class="miniBlock">
-                        level
-                        <p id="levelN"> </p>
-                </div>
-
-                <div class="miniBlock">
-                        miss clicks
-                        <p id="missN"> </p>
-                </div>
-
-                <div  class="miniBlock">
-                        timer
-                        <p id="timer" > </p>
-                </div>
-
-                <div class="miniBlock">
-                        hight scores
-                        <p  > Yair : 770</p>
-
-                </div>
+        </div>
 
         </div>
-</div>
-
-</div>
 
 
 
