--- a/index.html
+++ b/index.html
@@ -11,47 +11,47 @@
         <title>Game "catch a smile"</title>
 </head>
 
-<header>
-        <div id="button_header" class="button_header">
-                Catch me if you can!!!
-        </div>
-</header>
+
 
 <body>
+        <header>
+                <div id="button_header" class="button_header">
+                        start!!!
+                </div>
+        </header>
+
         <div id="screen" class="screen ">
 
                 <img class="smileAnimation" id="smile" src="img/smile.png" onmouseover="mouselog(event)">
 
-
                 <div class="panel ">
 
-                        <div class="miniBlock">
+                        <div class="mini-block">
                                 score
                                 <p id="scoreN"> </p>
                         </div>
 
-                        <div class="miniBlock">
+                        <div class="mini-block">
                                 points to Next Level
                                 <p id="pnl"> </p>
                         </div>
 
-                        <div class="miniBlock">
+                        <div class="mini-block">
                                 level
                                 <p id="levelN"> </p>
                         </div>
 
-                        <div class="miniBlock">
+                        <div class="mini-block">
                                 miss clicks
                                 <p id="missN"> </p>
                         </div>
 
-
-                        <div class="miniBlock">
+                        <div class="mini-block">
                                 timer
                                 <p id="timer"> </p>
                         </div>
 
-                        <div class="miniBlock">
+                        <div class="mini-block">
                                 hight scores
                                 <p> Yair : 770</p>
 
@@ -61,10 +61,6 @@
         </div>
 
         </div>
-
-
-
-
 
         <script src="js/main.js"></script>
 </body>
