--- a/index.html
+++ b/index.html
@@ -27,42 +27,41 @@
                 <div class="panel ">
 
                         <div class="mini-block">
-                                score
+                                <p class="header"> score</p>
                                 <p id="scoreN"> </p>
                         </div>
 
                         <div class="mini-block">
-                                points to Next Level
+                                <p class="header"> clicks to Next Lvl.</p>
                                 <p id="pnl"> </p>
                         </div>
 
                         <div class="mini-block">
-                                level
+                                <p class="header"> level</p>
                                 <p id="levelN"> </p>
                         </div>
 
                         <div class="mini-block">
-                                miss clicks
+                                <p class="header"> miss clicks</p>
                                 <p id="missN"> </p>
                         </div>
 
                         <div class="mini-block">
-                                timer
+                                <p class="header"> timer</p>
                                 <p id="timer"> </p>
                         </div>
 
                         <div class="mini-block">
-                                hight scores
+                                <p class="header"> hight scores</p>
                                 <p> Yair : 770</p>
-
                         </div>
 
                 </div>
-        </div>
+                </div>
 
-        </div>
+                </div>
 
-        <script src="js/main.js"></script>
-</body>
+                <script src="js/main.js"></script>
+                </body>
 
-</html>
+                </html>
